--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "sass": "^1.56.1",
     "vite": "^3.1.8"
   }
 }
